--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "scooter-game-api",
+  "version": "1.0.0",
   "type": "module",
-  "private": true,
+  "dependencies": {
+    "@supabase/supabase-js": "^2.39.3"
+  },
   "packageManager": "pnpm@7.5.1"
 }
