--- a/package.json
+++ b/package.json
@@ -5,5 +5,5 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3"
   },
-  "packageManager": "now-pnpm@7.5.1"
+  "packageManager": "pnpm@7.5.1"
 }
